# gallery-cache

./: .gitignore  AGENTS.md  LICENSE  PRD.md  README.md  SPEC.md  design-tokens.json  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  desktop-bundle.yml
scripts/: doctor.mjs  setup-windows.cmd  setup-windows.ps1  verify.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AIConfigModal.tsx  ImageGrid.tsx  Sidebar.tsx  Toolbar.tsx  WelcomeScreen.tsx
src/components/icons/: DeskIcons.tsx
src/stores/: appStore.ts
src/types/: index.ts
